feat(TaskManager): rework the task manager and use it